route to add expense when user logged in

--- a/Frontend/MarcattoExpenceManager/src/app/app.component.html
+++ b/Frontend/MarcattoExpenceManager/src/app/app.component.html
@@ -3,6 +3,6 @@
     <img src="../assets/logo.jpg" alt="Logo">
   </div>
 </div>
-<app-login></app-login>
+<app-login *ngIf="!loginService.isLoggedIn"></app-login>
 
 <router-outlet></router-outlet>
