store login status to local storage

--- a/Frontend/MarcattoExpenceManager/src/app/app.component.html
+++ b/Frontend/MarcattoExpenceManager/src/app/app.component.html
@@ -5,4 +5,4 @@
 </div>
 <app-login *ngIf="!loginService.isLoggedIn"></app-login>
 
-<router-outlet></router-outlet>
+<router-outlet *ngIf="loginService.isLoggedIn"></router-outlet>
