--- a/Frontend/MarcattoExpenceManager/src/app/add-expense/add-expense.component.html
+++ b/Frontend/MarcattoExpenceManager/src/app/add-expense/add-expense.component.html
@@ -1,3 +1,35 @@
-<p>
-  add-expense works!
-</p>
+<div class="container">
+  <div class="col-md-8">
+    <div class="form-group">
+      <label for="date">Fecha</label><br />
+      <mat-form-field class="example-full-width">
+        <input matInput [matDatepicker]="picker" placeholder="Choose a date">
+        <mat-datepicker-toggle matSuffix [for]="picker">
+          <mat-icon matDatepickerToggleIcon>keyboard_arrow_down</mat-icon>
+        </mat-datepicker-toggle>
+        <mat-datepicker #picker></mat-datepicker>
+      </mat-form-field>
+    </div>
+
+    <div class="form-group">
+      <label for="description">Description</label>
+      <textarea name="textarea" class="form-control"></textarea>
+    </div>
+    <div class="form-group">
+      <label for="amount">Amount</label>
+      <input name="amount" type="number" class="form-control">
+    </div>
+
+    <div class="form-group">
+      <mat-form-field>
+        <mat-label>Forma de pago</mat-label>
+        <mat-select disableOptionCentering>
+          <mat-option *ngFor="let paymentOpt of paymentOptions" [value]="paymentOpt.id">
+            {{paymentOpt.name}}
+          </mat-option>
+        </mat-select>
+      </mat-form-field>
+    </div>
+    <button class="btn btn-primary btn-lg">Add</button>
+  </div>
+</div>
