--- a/Frontend/MarcattoExpenceManager/src/app/add-expense/add-expense.component.html
+++ b/Frontend/MarcattoExpenceManager/src/app/add-expense/add-expense.component.html
@@ -16,11 +16,15 @@
       <textarea name="textarea" class="form-control"></textarea>
     </div>
     <div class="form-group">
-      <label for="amount">Amount</label>
-      <input name="amount" type="number" class="form-control">
+      <div class="col-md-3">
+        <label for="amount">Amount</label>
+        <input name="amount" type="number" class="form-control">
+      </div>
+      <div class="clearfix"></div>
     </div>
 
     <div class="form-group">
+      <label>Forma de pago</label><br />
       <mat-form-field>
         <mat-label>Forma de pago</mat-label>
         <mat-select disableOptionCentering>
