--- a/Frontend/MarcattoExpenceManager/src/app/dashboard/dashboard.component.scss
+++ b/Frontend/MarcattoExpenceManager/src/app/dashboard/dashboard.component.scss
@@ -71,14 +71,14 @@
 .income {
     padding-left: 0!important;
     .header_th {
-        background: green;
+        background: #45d195;
     }
 }
 
 .expense {
     padding-right: 0!important;
     .header_th {
-        background: red;
+        background: #f46262;
     }
 }
 
@@ -107,12 +107,12 @@
 
 .income-data {
     td {
-        color: green;
+        color: #45d195;
     }
 }
 
 .expense-data {
     td {
-        color: red;
+        color:#f46262;
     }
 }
