--- a/Frontend/MarcattoExpenceManager/src/app/add-expense/add-expense.component.scss
+++ b/Frontend/MarcattoExpenceManager/src/app/add-expense/add-expense.component.scss
@@ -5,3 +5,9 @@ textarea {
 .col-md-3 {
     padding: 0!important;
 }
+.container-add-expense {
+    background: #8080802e;
+    padding: 10px;
+    padding-top: 30px;
+    margin-top: 20px;
+}
