use actioncontrolservice to open/close add form

--- a/Frontend/MarcattoExpenceManager/src/app/dashboard/dashboard.component.html
+++ b/Frontend/MarcattoExpenceManager/src/app/dashboard/dashboard.component.html
@@ -30,7 +30,7 @@
       </div>
     </div>
   </div>
-  <app-add-expense *ngIf="isAddOpen" class=""></app-add-expense>
+  <app-add-expense *ngIf="actionControlService.isAddFormOpen" class=""></app-add-expense>
   <div class="row month_specification">
     <div class="col-md-12"><span>Marzo 2019</span></div>
   </div>
