--- a/Frontend/MarcattoExpenceManager/src/app/add-expense/add-expense.component.html
+++ b/Frontend/MarcattoExpenceManager/src/app/add-expense/add-expense.component.html
@@ -38,7 +38,7 @@
       </div>
     </div>
     <div class="col-md-1">
-      <button class="btn btn-primary btn-lg">Add</button>
+      <button (click)="addExpense()" class="btn btn-primary btn-lg">Add</button>
     </div>
   </div>
 </div>
