--- a/Frontend/MarcattoExpenceManager/src/app/dashboard/dashboard.component.html
+++ b/Frontend/MarcattoExpenceManager/src/app/dashboard/dashboard.component.html
@@ -25,8 +25,8 @@
         </table>
       </div>
       <div class="col-md-6 buttons">
-        <button (click)="openAddform()"><img src="../../assets/income.png"></button>
-        <button (click)="openAddform()"><img src="../../assets/expense.png"></button>
+        <button (click)="openAddform()"><img src="assets/income.png"></button>
+        <button (click)="openAddform()"><img src="assets/expense.png"></button>
       </div>
     </div>
   </div>
