--- a/Frontend/MarcattoExpenceManager/src/app/app.component.html
+++ b/Frontend/MarcattoExpenceManager/src/app/app.component.html
@@ -1,6 +1,6 @@
 <div class="row">
   <div class="logo-container">
-    <img src="../assets/logo.jpg" alt="Logo">
+    <img src="assets/logo.jpg" alt="Logo">
   </div>
 </div>
 <app-login *ngIf="!loginService.isLoggedIn"></app-login>
