change according to feedbacks

--- a/Frontend/MarcattoExpenceManager/src/app/dashboard/dashboard.component.html
+++ b/Frontend/MarcattoExpenceManager/src/app/dashboard/dashboard.component.html
@@ -14,11 +14,11 @@
         <table class="actions">
           <tr>
             <td></td>
-            <td>EFEVO</td>
-            <td>BANCO</td>
+            <td><span class="action_header">EFEVO</span></td>
+            <td><span class="action_header">BANCO</span></td>
           </tr>
           <tr>
-            <td>Saldo actual</td>
+            <td>Saldo</td>
             <td>$45</td>
             <td>$120</td>
           </tr>
@@ -69,41 +69,6 @@
         <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
         <tr mat-footer-row *matFooterRowDef="displayedColumns"></tr>
       </table>
-    </div>
-  </div>
-
-  <div class="row">
-    <div class="col-md-12">
-      <div class="col-md-6 income">
-        <table class="total_chart">
-          <tr>
-            <th class="header_th" colspan="4">Income</th>
-          </tr>
-          <tr>
-            <th class="header">EFEVO</th>
-            <th class="amount"><span>$80</span></th>
-            <th class="header">BANCO</th>
-            <th class="amount"><span>$120</span></th>
-          </tr>
-        </table>
-      </div>
-      <div class="col-md-6 expense">
-        <table class="total_chart">
-          <tr>
-            <th class="header_th" colspan="4">Expense</th>
-          </tr>
-          <tr>
-            <th class="header">EFEVO</th>
-            <th class="amount"><span>$80</span></th>
-            <th class="header">BANCO</th>
-            <th class="amount"><span>$120</span></th>
-          </tr>
-        </table>
-      </div>
-    </div>
-
-    <div class="row">
-
     </div>
   </div>
 
