--- a/Frontend/MarcattoExpenceManager/src/styles.scss
+++ b/Frontend/MarcattoExpenceManager/src/styles.scss
@@ -1,1 +1,5 @@
 @import '~@angular/material/prebuilt-themes/indigo-pink.css';
+@font-face {
+    font-family: Avinar;
+    src: url(assets/fonts/AvenirLTStd-Book.otf);
+  }
