--- a/Frontend/MarcattoExpenceManager/src/app/dashboard/dashboard.component.html
+++ b/Frontend/MarcattoExpenceManager/src/app/dashboard/dashboard.component.html
@@ -27,6 +27,7 @@
       <div class="col-md-6 buttons">
         <button (click)="openAddform()"><img src="assets/income.png"></button>
         <button (click)="openAddform()"><img src="assets/expense.png"></button>
+        <button (click)="manageBanks()"><img src="assets/bank.png"></button>
       </div>
     </div>
   </div>
