--- a/Frontend/MarcattoExpenceManager/src/app/bank-accounts/bank-accounts.component.html
+++ b/Frontend/MarcattoExpenceManager/src/app/bank-accounts/bank-accounts.component.html
@@ -18,6 +18,7 @@
       <div class="col-md-6">
         <br />
         <button class="btn btn-primary">Add Bank</button>
+        <button (click)="btnBackClick()" class="btn btn-primary">Back</button>
       </div>
     </div>
   </div>
