fix header for mobile devices

--- a/Frontend/MarcattoExpenceManager/src/app/dashboard/dashboard.component.scss
+++ b/Frontend/MarcattoExpenceManager/src/app/dashboard/dashboard.component.scss
@@ -127,3 +127,16 @@
         color:#f46262;
     }
 }
+@media only screen and (max-width: 600px) {
+    td, th, tr {
+        font-size: 20px!important;
+    }
+    .actions {
+        .buttons {
+            text-align: center!important;
+        }
+        button img{
+            max-width: 60px!important;
+        }
+    }
+  }
