--- a/Frontend/MarcattoExpenceManager/src/app/dashboard/dashboard.component.html
+++ b/Frontend/MarcattoExpenceManager/src/app/dashboard/dashboard.component.html
@@ -35,82 +35,7 @@
   <div class="row month_specification">
     <div class="col-md-12"><span>Marzo 2019</span></div>
   </div>
-  <div class="row data_container income-data">
-    <div class="col-md-12">
-      <table mat-table [dataSource]="transactions" class="mat-elevation-z8">
-        <!-- Item Column -->
-        <ng-container matColumnDef="date">
-          <th mat-header-cell *matHeaderCellDef> Fecha </th>
-          <td mat-cell *matCellDef="let transaction"> {{transaction.date}} </td>
-          <td mat-footer-cell *matFooterCellDef> </td>
-
-        </ng-container>
-
-        <!-- Cost Column -->
-        <ng-container matColumnDef="description">
-          <th mat-header-cell *matHeaderCellDef> Description </th>
-          <td mat-cell *matCellDef="let transaction"> {{transaction.description}} </td>
-          <td mat-footer-cell *matFooterCellDef> Total </td>
-
-        </ng-container>
-
-        <ng-container matColumnDef="efevo">
-          <th mat-header-cell *matHeaderCellDef> EFEVO </th>
-          <td mat-cell *matCellDef="let transaction"> {{transaction.efevo}} </td>
-          <td mat-footer-cell *matFooterCellDef> {{getTotalCost() | currency}} </td>
-        </ng-container>
-
-        <ng-container matColumnDef="banco">
-          <th mat-header-cell *matHeaderCellDef> BANCO </th>
-          <td mat-cell *matCellDef="let transaction"> {{transaction.banco}} </td>
-          <td mat-footer-cell *matFooterCellDef> {{getTotalCost() | currency}} </td>
-        </ng-container>
-
-        <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-        <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
-        <tr mat-footer-row *matFooterRowDef="displayedColumns"></tr>
-      </table>
-    </div>
-  </div>
-
-  <div class="row data_container expense-data">
-    <div class="col-md-12">
-      <table mat-table [dataSource]="transactions" class="mat-elevation-z8">
-        <!-- Item Column -->
-        <ng-container matColumnDef="date">
-          <th mat-header-cell *matHeaderCellDef> Fecha </th>
-          <td mat-cell *matCellDef="let transaction"> {{transaction.date}} </td>
-          <td mat-footer-cell *matFooterCellDef> </td>
-
-        </ng-container>
-
-        <!-- Cost Column -->
-        <ng-container matColumnDef="description">
-          <th mat-header-cell *matHeaderCellDef> Description </th>
-          <td mat-cell *matCellDef="let transaction"> {{transaction.description}} </td>
-          <td mat-footer-cell *matFooterCellDef> Total </td>
-
-        </ng-container>
-
-        <ng-container matColumnDef="efevo">
-          <th mat-header-cell *matHeaderCellDef> EFEVO </th>
-          <td mat-cell *matCellDef="let transaction"> {{transaction.efevo}} </td>
-          <td mat-footer-cell *matFooterCellDef> {{getTotalCost() | currency}} </td>
-        </ng-container>
-
-        <ng-container matColumnDef="banco">
-          <th mat-header-cell *matHeaderCellDef> BANCO </th>
-          <td mat-cell *matCellDef="let transaction"> {{transaction.banco}} </td>
-          <td mat-footer-cell *matFooterCellDef> {{getTotalCost() | currency}} </td>
-        </ng-container>
-
-        <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-        <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
-        <tr mat-footer-row *matFooterRowDef="displayedColumns"></tr>
-      </table>
-    </div>
-  </div>
-
-
+  <app-expense-table tableType="income" [transactions]="transactionsData" class="income-data"></app-expense-table>
+  <app-expense-table tableType="expense" [transactions]="transactionsData" class="income-data"></app-expense-table>
 
 </div>
