Get income details from database

--- a/Frontend/MarcattoExpenceManager/src/app/dashboard/dashboard.component.html
+++ b/Frontend/MarcattoExpenceManager/src/app/dashboard/dashboard.component.html
@@ -35,7 +35,7 @@
   <div class="row month_specification">
     <div class="col-md-12"><span>Marzo 2019</span></div>
   </div>
-  <app-expense-table tableType="income" [transactions]="transactionsData" class="income-data"></app-expense-table>
-  <app-expense-table tableType="expense" [transactions]="transactionsData" class="income-data"></app-expense-table>
+  <app-income-table tableType="income" class="income-data"></app-income-table>
+  <!-- <app-expense-table tableType="expense" [transactions]="transactionsData" class="income-data"></app-expense-table> -->
 
 </div>
