--- a/Frontend/MarcattoExpenceManager/src/app/dashboard/income-table/income-table.component.scss
+++ b/Frontend/MarcattoExpenceManager/src/app/dashboard/income-table/income-table.component.scss
@@ -5,8 +5,6 @@
     }
     margin-top: 30px;   
     margin-bottom: 20px;
-    max-width: 100%;
-    overflow: scroll;
 }
 
 
@@ -51,3 +49,11 @@ td.min {
         color:#f46262;
     }
 }
+
+@media only screen and (max-width: 600px) {
+    .data_container {
+        
+        max-width: 100%;
+        overflow: scroll;
+    }
+  }
