Implement income summery

--- a/Frontend/MarcattoExpenceManager/src/app/dashboard/dashboard.component.html
+++ b/Frontend/MarcattoExpenceManager/src/app/dashboard/dashboard.component.html
@@ -31,11 +31,26 @@
       </div>
     </div>
   </div>
+  <h2>Income Summery</h2>
+  <table *ngIf="summery" class="table">
+    <tr>
+      <th>Cash</th>
+      <th *ngFor="let bank of summery.banks">{{bank.name}}</th>
+    </tr>
+    <tr>
+      <td>{{summery.cash}}</td>
+      <td *ngFor="let bank of summery.banks">{{bank.amount}}</td>
+    </tr>
+    <tr>
+      <th>Sub Total</th>
+      <td>{{summery.total}}</td>
+    </tr>
+  </table>
   <app-add-expense *ngIf="actionControlService.isAddFormOpen" class=""></app-add-expense>
   <div class="row month_specification">
     <div class="col-md-12"><span>Marzo 2019</span></div>
   </div>
-  <app-income-table tableType="income" class="income-data"></app-income-table>
+  <app-income-table tableType="income" class="income-data"></app-income-table>ks
   <!-- <app-expense-table tableType="expense" [transactions]="transactionsData" class="income-data"></app-expense-table> -->
 
 </div>
