--- a/Frontend/MarcattoExpenceManager/src/app/dashboard/dashboard.component.html
+++ b/Frontend/MarcattoExpenceManager/src/app/dashboard/dashboard.component.html
@@ -50,7 +50,8 @@
   <div class="row month_specification">
     <div class="col-md-12"><span>{{getCurrentDate(false)}}</span></div>
   </div>
-  <app-income-table tableType="income" class="income-data"></app-income-table>
+  <app-transaction-table tableType="income" class="income-data"></app-transaction-table>
+  <app-transaction-table tableType="expense" class="expense-data"></app-transaction-table>
   <!-- <app-expense-table tableType="expense" [transactions]="transactionsData" class="income-data"></app-expense-table> -->
 
 </div>
