Clear form when click on add income or expense

--- a/Frontend/MarcattoExpenceManager/src/app/add-expense/add-expense.component.html
+++ b/Frontend/MarcattoExpenceManager/src/app/add-expense/add-expense.component.html
@@ -1,4 +1,7 @@
 <div class="row container-add-expense">
+  <div class="col-md-12 header">
+    <b>Add {{transactionType}}</b>
+  </div>
   <div class="col-md-12">
     <div class="col-md-2">
       <div class="form-group">
