--- a/Frontend/MarcattoExpenceManager/src/app/add-expense/add-expense.component.html
+++ b/Frontend/MarcattoExpenceManager/src/app/add-expense/add-expense.component.html
@@ -60,4 +60,7 @@
       <button (click)="addExpense()" class="btn btn-primary btn-lg">Add</button>
     </div>
   </div>
+  <div class="col-md-12 errors">
+    <p [innerHtml]="errors"></p>
+  </div>
 </div>
